# SensorMapping

./: CMakeLists.txt  OccupancyGrid.cpp  OccupancyGrid.h  OccupancyGridMapper.cpp  OccupancyGridMapper.h  README.md  RectangleDetector.cpp  RectangleDetector.h  SensorMapping.cpp  SensorMappingDefinitions.h  __unit_tests.cpp  input_L1_L2.txt
output/: rectangles.txt
